<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_bg"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <com.facebook.drawee.view.SimpleDraweeView
        android:layout_width="@dimen/font_60"
        android:layout_height="@dimen/font_60"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_25"
        app:overlayImage="@drawable/ic_about_me"
        app:roundAsCircle="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_5"
        android:text="@string/app_author"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_20"/>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_marginRight="@dimen/dimen_5"
        android:layout_marginTop="@dimen/dimen_20"
        app:cardCornerRadius="@dimen/radius_2"
        app:cardElevation="@dimen/dimen_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15"
                android:drawableLeft="@drawable/ic_github"
                android:drawablePadding="@dimen/dimen_10"
                android:gravity="center_vertical"
                android:text="@string/github"/>

            <TextView
                android:id="@+id/tv_jianshu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15"
                android:drawableLeft="@drawable/ic_github"
                android:drawablePadding="@dimen/dimen_10"
                android:gravity="center_vertical"
                android:text="@string/jianshu"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>