<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/vg_toolbar"
        layout="@layout/toolbar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cdv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vg_toolbar"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_15"
        app:cardCornerRadius="@dimen/radius_2"
        app:cardElevation="@dimen/dimen_1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                app:roundedCornerRadius="@dimen/radius_2"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_8"
                android:layout_toRightOf="@id/iv_avatar"
                android:includeFontPadding="false"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_20"
                tools:text="user name"/>

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_name"
                android:layout_below="@id/tv_name"
                android:includeFontPadding="false"
                android:textColor="@color/slate"
                android:textSize="@dimen/font_12"
                tools:text="bio"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cdv_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cdv_profile"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_15"
        app:cardCornerRadius="@dimen/radius_2"
        app:cardElevation="@dimen/dimen_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10">

            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/font_16"
                    tools:text="1234"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_follower"
                    android:layout_marginLeft="@dimen/dimen_3"
                    android:layout_toRightOf="@id/tv_follower"
                    android:text="@string/follower"
                    android:textSize="@dimen/font_12"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/font_16"
                    tools:text="1234"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_following"
                    android:layout_marginLeft="@dimen/dimen_3"
                    android:layout_toRightOf="@id/tv_following"
                    android:text="@string/following"
                    android:textSize="@dimen/font_12"/>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_30"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        android:textSize="@dimen/font_16"
        android:background="@drawable/bg_button"
        android:text="@string/logout"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>